# springer

./: README.md  springer.cabal
app/: Main.hs
src/: Springer.hs
src/Springer/: Board.hs  FenParser.hs  Parse.hs  UciParser.hs
test/: Main.hs
test/Springer/: FenParserTest.hs  UciParserTest.hs
