cabal-version:      2.4
name:               springer
version:            0.1.0.0
synopsis:           An attempt at a UCI compliant chess engine
description:        A UCI compliant Chess engine written for me to become a better Chess player

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mikkel Christiansen
maintainer:         mikkel@rheosystems.com

-- A copyright notice.
copyright:          Mikkel Christiansen
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Springer,
                      Springer.Board
                      Springer.Engine
                      Springer.FenParser
                      Springer.Parse
                      Springer.UciParser

    -- other-modules:    Springer.Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.14.0.0,
                      vector
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: Haskell2010

executable springer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        springer

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite springer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Springer.FenParserTest,
                       Springer.UciParserTest
  build-depends:       QuickCheck
                     , base
                     , hspec
                     , springer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
